--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.0.7",
     "styled-components": "^4.1.2"
   },
