--- a/app.json
+++ b/app.json
@@ -1,29 +1,31 @@
 {
   "expo": {
-    "name": "nomad-movies",
+    "name": "Nomad Movies",
+    "description": "Discover Movies and Series in a beautiful way.",
     "slug": "nomad-movies",
     "privacy": "public",
     "sdkVersion": "31.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
+    "githubUrl": "https://github.com/nomadcoders/nomad-movies",
+    "primaryColor": "#000000",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#000"
     }
   }
 }
